update: Adding myCarsView that will be a list of favorite cars selected by the user.

--- a/Ford Vehicle Collection/Base.lproj/Main.storyboard
+++ b/Ford Vehicle Collection/Base.lproj/Main.storyboard
@@ -134,7 +134,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1700" y="298"/>
+            <point key="canvasLocation" x="-3190" y="550"/>
         </scene>
         <!--SUV-->
         <scene sceneID="Yqy-bU-5R9">
@@ -258,7 +258,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zyb-pq-0Au" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1700" y="-1700"/>
+            <point key="canvasLocation" x="-3337" y="-1463"/>
         </scene>
         <!--Menu-->
         <scene sceneID="1WL-zd-7vT">
@@ -400,7 +400,71 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bYp-PA-JwZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1700" y="1920.4433497536947"/>
+            <point key="canvasLocation" x="-3817" y="1347"/>
+        </scene>
+        <!--My Cars-->
+        <scene sceneID="yTm-Xf-EEy">
+            <objects>
+                <viewController id="lXa-cV-4cP" customClass="MyCars" customModule="Ford_Vehicle_Collection" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rDN-5t-fcg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lyI-iG-ZWr">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" editingAccessoryType="detailButton" rowHeight="67" id="Rfb-j6-Kqg" customClass="MyCarsCell" customModule="Ford_Vehicle_Collection" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="67"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="cell" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Rfb-j6-Kqg" id="KcP-JH-EiX" customClass="MyCarsCell" customModule="Ford_Vehicle_Collection" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="66.666666666666671"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ab1-Ka-QSB">
+                                                    <rect key="frame" x="0.0" y="0.0" width="82" height="67"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="82" id="K1Z-Zr-YKL"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018 Mustang" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mcL-1j-RhG">
+                                                    <rect key="frame" x="90" y="8" width="203" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="mcL-1j-RhG" firstAttribute="centerY" secondItem="Ab1-Ka-QSB" secondAttribute="centerY" id="0Mf-AB-AGm"/>
+                                                <constraint firstItem="Ab1-Ka-QSB" firstAttribute="top" secondItem="KcP-JH-EiX" secondAttribute="top" id="1cP-Wr-5MB"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="mcL-1j-RhG" secondAttribute="bottom" constant="-2" id="HOx-3O-kI9"/>
+                                                <constraint firstItem="mcL-1j-RhG" firstAttribute="leading" secondItem="Ab1-Ka-QSB" secondAttribute="trailing" constant="8" symbolic="YES" id="Kpi-g4-dp1"/>
+                                                <constraint firstItem="Ab1-Ka-QSB" firstAttribute="centerY" secondItem="KcP-JH-EiX" secondAttribute="centerY" id="b7Q-Mp-R8v"/>
+                                                <constraint firstItem="Ab1-Ka-QSB" firstAttribute="leading" secondItem="KcP-JH-EiX" secondAttribute="leading" id="e83-cq-Ufb"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="mcL-1j-RhG" secondAttribute="trailing" constant="67" id="wR3-DP-Vop"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="lXa-cV-4cP" id="M2B-NB-PJm"/>
+                                    <outlet property="delegate" destination="lXa-cV-4cP" id="r69-cQ-yy5"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lyI-iG-ZWr" firstAttribute="top" secondItem="rDN-5t-fcg" secondAttribute="top" id="3Sa-xN-50c"/>
+                            <constraint firstAttribute="trailing" secondItem="lyI-iG-ZWr" secondAttribute="trailing" id="Ki1-a0-IVz"/>
+                            <constraint firstAttribute="bottom" secondItem="lyI-iG-ZWr" secondAttribute="bottom" id="tl5-BE-YMA"/>
+                            <constraint firstItem="lyI-iG-ZWr" firstAttribute="leading" secondItem="rDN-5t-fcg" secondAttribute="leading" id="vlZ-ir-tyT"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UdL-6u-emv"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9qq-6r-OrU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1554" y="1384"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="rym-dQ-juR">
@@ -423,7 +487,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZPE-mD-7cI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3153" y="81"/>
+            <point key="canvasLocation" x="-5001" y="26"/>
         </scene>
         <!--PERFORMANCE-->
         <scene sceneID="Hqz-IF-qeg">
@@ -549,7 +613,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mBi-5n-WSI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1700" y="-364"/>
+            <point key="canvasLocation" x="-2207" y="-4"/>
         </scene>
         <!--TRUCKSVANS-->
         <scene sceneID="PNT-oU-LEJ">
@@ -676,7 +740,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NuE-f1-XUB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1700" y="-1029"/>
+            <point key="canvasLocation" x="-2154" y="-832"/>
         </scene>
         <!--EV-->
         <scene sceneID="2ds-Qa-7iA">
@@ -805,7 +869,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EuL-K5-tjB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1700" y="956"/>
+            <point key="canvasLocation" x="-5002.3999999999996" y="1345.5665024630543"/>
         </scene>
     </scenes>
     <resources>
